--- a/BankManagament/pom.xml
+++ b/BankManagament/pom.xml
@@ -8,12 +8,27 @@
     <artifactId>BankManagament</artifactId>
     <version>1.0-SNAPSHOT</version>
 <dependencies>
+
     <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <version>1.18.30</version>
         <scope>provided</scope>
     </dependency>
+
+<!--ByCrypt password hasher-->
+    <dependency>
+        <groupId>at.favre.lib</groupId>
+        <artifactId>bcrypt</artifactId>
+        <version>0.10.2</version>
+    </dependency>
+<!--XML bind-->
+    <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.1</version>
+    </dependency>
+
 </dependencies>
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
