--- a/BankManagament/pom.xml
+++ b/BankManagament/pom.xml
@@ -21,7 +21,11 @@
     <artifactId>postgresql</artifactId>
     <version>42.6.0</version>
 </dependency>
-
+<dependency>
+    <groupId>jakarta.persistence</groupId>
+    <artifactId>jakarta.persistence-api</artifactId>
+    <version>3.0.0</version>
+</dependency>
    
 <dependency>
     <groupId>org.hibernate.orm</groupId>
